src/test/ui/const-len-underflow-separate-spans.stderr
error[E0080]: constant evaluation error
  --> $DIR/const-len-underflow-separate-spans.rs:17:20
   |
17 | const LEN: usize = ONE - TWO;
   |                    ^^^^^^^^^ attempt to subtract with overflow
   |
note: inside call to LEN
  --> $DIR/const-len-underflow-separate-spans.rs:17:1
   |
17 | const LEN: usize = ONE - TWO;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: constant evaluation error
  --> $DIR/const-len-underflow-separate-spans.rs:21:17
   |
21 |     let a: [i8; LEN] = unimplemented!();
   |                 ^^^ miri failed: attempt to subtract with overflow

error: aborting due to 2 previous errors

